# acronyms

./: .dockerignore  .eslintrc.js  .flake8  .gitignore  .gitlab-ci.yml  .hadolint.yaml  .prettierignore  .prettierrc.yaml  .stylelintrc.js  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  README.md  Tiltfile  alembic.ini  dev.sh  eslint.config.js  index.html  k3d.yaml  mypy.ini  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.sh  tox.ini  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml  release.yaml  test.yaml
alembic/: env.py
backend/: .gitignore  Dockerfile  Dockerfile.dev  mypy.ini  pyproject.toml  tox.ini
backend/acronyms/: __main__.py  main.py  models.py  schemas.py  settings.py  site.py
backend/acronyms/routes/: acronyms.py
backend/examples/: __init__.py
backend/src/acronyms/: __init__.py  __main__.py  models.py  site.py
backend/tests/: __init__.py  conftest.py  test_site.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py
chart/: .helmignore  Chart.yaml  k3d.yaml  values.yaml  values_ci.yaml  values_dev.yaml  values_local.yaml
chart/ci/: values.yaml
chart/dev/: setup.sh  traefik.yaml  values.yaml
chart/templates/: _helpers.tpl  acronyms.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
chart/templates/tests/: test-backend.yaml  test-connection.yaml
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json
frontend/src/: App.vue  env.d.ts  index.html  main.ts  styles.scss
frontend/src/components/: AcronymRow.vue  AcronymSearch.vue  NavBar.vue
frontend/src/stores/: acronym.ts  editor.ts
frontend/test/: basic.test.ts
scripts/: acronyms.yaml  cluster.sh  create_cluster.ps1  create_cluster.sh  develop.dockerfile  import_acronyms.py  import_data.py  install_dependencies.sh  k3d.yaml  lint.sh  mailu.yaml  open_browser.py  serve_devsite.js  serve_devsite.sh  serve_devsite.ts  setup.ps1  setup.sh  traefik.yaml  values.yaml  wait_folder.py  wait_folder.sh
src/acronyms/: __main__.py  auth.py  email.py  mail.py  models.py  schemas.py  settings.py  typing.py
src/acronyms/routes/: __init__.py  acronyms.py
src/chart/: .helmignore  Chart.yaml  values.yaml  values_local.yaml
src/chart/templates/: NOTES.txt  deployment.yaml  ingress.yaml  service.yaml
src/frontend/: App.vue  index.html
src/frontend/stores/: editor.ts
src/migration/: env.py
src/migration/versions/: 351b8c7d463b_first_revision.py  46ee6e1569b5_add_description_column.py
tests/: __init__.py  conftest.py  test_auth.py  test_email.py  test_main.py  test_site.py  util.py
tests/backend/: __init__.py  conftest.py  test_site.py
tests/data/: acronyms.json
tests/e2e/: __init__.py
tests/frontend/: basic.test.ts
tests/routes/: __init__.py  test_acronyms.py
