# Python configuration file for building, dependencies, and tooling.
#
# For more information, visit
# https://snarky.ca/what-the-heck-is-pyproject-toml/.

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
extend-exclude = "^/template"
line-length = 80

[tool.coverage.report]
exclude_lines = [
    "if sys.version_info.*",
    "pragma: no cover",
    "raise NotImplementedError",
]
show_missing = true

[tool.coverage.run]
branch = true
command_line = "-m pytest"
omit = []
source = ["acronyms"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
exclude = [
    ".benchmarks/",
    ".hypothesis/",
    ".pytest_cache/",
    ".venv/",
    "backend/alembic",
    "dist/",
    "node_modules/",
    "tmp/",
    "web/"
]
ignore_missing_imports = true
no_implicit_optional = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.poetry]
authors = ["Macklan Weinstein <macklan.weinstein@gmail.com>"]
description = "Application for saving acronyms"
documentation = "https://scruffaluff.gitlab.io/acronyms"
homepage = "https://gitlab.com/scruffaluff/acronyms"
keywords = []
license = "MIT"
name = "acronyms"
packages = [
    { from = "backend", include = "acronyms" }
]
version = "0.1.0"

[tool.poetry.dependencies]
aioredis = "^2.0.0"
aiosqlite = "^0.17.0"
asyncpg = "^0.27.0"
fastapi = "^0.82.0"
fastapi-cache2 = { extras = ["redis"], version = "^0.1.0" }
fastapi-users = { extras = ["oauth", "sqlalchemy"], version = "^10.2.0" }
psycopg2 = "^2.9.0"
pydantic = "^1.10.0"
python = "^3.9.0"
pyyaml = "^6.0.0"
SQLAlchemy = { extras = ["mypy"], version = "^1.4.0" }
uvicorn = { extras = ["standard"], version = "^0.18.0" }

[tool.poetry.group.dev.dependencies]
alembic = "^1.8.0"
bandit = "^1.7.0"
black = "^22.8.0"
coverage = { extras = ["toml"], version = "^6.4.0" }
flake8 = "^5.0.0"
flake8-bugbear = "^22.8.0"
flake8-import-order = "^0.18.0"
mccabe = "^0.7.0"
mypy = "^0.971"
pdbpp = "^0.10.0"
playwright = "^1.25.2"
psycopg = { extras = ["pool"], version = "^3.1.0" }
py-spy = "^0.3.0"
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.0"
pytest-playwright = "^0.3.0"
pytest-postgresql = "^4.1.0"
requests = "^2.28.0"
schemathesis = "^3.17.0"
toml = "^0.10.0"
tox = "^3.26.0"
types-pyyaml = "^6.0.12"
types-requests = "^2.28.0"
types-toml = "^0.10.0"

[tool.poetry.scripts]
acronyms = "acronyms.__main__:main"

[tool.pytest.ini_options]
addopts = """
    --verbose --browser chromium --capture no --output tests/results \
    --screenshot only-on-failure --video retain-on-failure
"""
markers = [
    "e2e: End to end tests",
]
python_classes = "Test*"
python_files = [
    "__init__.py",
    "test_*.py",
]
python_functions = ["test_*"]
testpaths = ["tests"]
